# tailypo

./: CITATION.cff  README.md  setup.cfg
src/notebooks/: main.ipynb
src/tailypo/: __init__.py
src/tests/: electron_test.py
